<resources>
    <string name="app_name">Medicaments Reminder</string>
    <string name="medicamentNameInput">Nazwa leku:</string>
    <string name="hintInsertMedicamentName">Podaj nazwę leku:</string>
    <string name="hintInsertMedicamentDose">Podaj dawkę leku:</string>
    <string name="dailyDosingFrequencyText">Podaj dzienną liczbę dawek leku: </string>
    <string name="firstDailyDoseHourText">Podaj godzinę przyjęcia pierwszej dawki:</string>
    <string name="hourGapBetweenDosesText">Podaj co ile godzin będziesz przyjmował lek:</string>
    <string name="hintAdditionalMedicamentInfo">Dodatkowe informacje</string>
    <string name="buttonSaveMedicamentText">Zapisz lek</string>
    <string name="medicamentDetailsDeleteMedicamentButtonText">Usuń lek</string>
    <string name="medicationDetailsEditMedicamentInfoButtonText">Edytuj lek</string>
    <string name="MedicamentDetailsSetReminderButtonText">Ustaw przypomnienie</string>
    <string name="setNotificationBtnTimeText">Wybierz godzinę</string>
    <string name="setNotificationBtnDateText">Wybierz datę</string>
    <string name="setNotiicationDoneButtonText">Potwierdź</string>

    <string-array name="options">
        <item>Dodaj nowy lek.</item>
        <item>Wyświetl swoją listę leków.</item>
    </string-array>

    <string-array name="spinnerEntriesDoseUnits">
        <item>mg</item>
        <item>μg</item>
        <item>ml</item>
        <item>tabletki</item>
        <item>krople</item>
    </string-array>

    <string-array name="spinnerEntriesDailyDosingFrequency">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="spinnerEntriesFirstDailyDoseHour">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="spinnerEntriesFirstDailyDoseMinutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Zaloguj</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="login_text">Zaloguj</string>
    <string name="createAccountText">Chcesz założyć konto?</string>
    <string name="orText">ALBO</string>
    <string name="logIn">Logowanie</string>
    <string name="registerText">Rejestracja</string>
    <string name="alreadyHaveAccountText">Masz już konto?</string>
    <string name="register">Zarejestruj się</string>
    <string name="repeatPasswordText">Powtórz hasło</string>
    <string name="title_activity_home">Home</string>
    <string name="Dodaj_Artykuły">AddAr</string>
    <string name="Profil">Profil</string>
    <string name="Wyloguj">Wyloguj</string>
    <string name="Dodaj">Dodaj lek</string>
    <string name="Ulubione">Favorite</string>
    <string name="Leki">Medicine</string>
    <string name="Artykuły">Article</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="inputMedicamentNameText">Podaj nazwę leku</string>
    <string name="insertMedicamentDose">Podaj dawkę leku</string>
    <string name="insertDailyMedicamentInputFrequency">Podaj częstotliwość przyjmowania</string>
    <string name="input_additional_info">Podaj dodatkowe informacje</string>
    <string name="add_medicament_to_db_btn_text">Dodaj lek</string>
    <string name="return_btn_text">Cofnij</string>
    <string name="alarms">Alarmy</string>
    <string name="txt_turn_off_alarm">Wyłącz</string>
    <string name="txt_delay_alarm">Odłóż</string>
    <string name="txt_time_to_take_medicament">Czas wziąć lek!</string>
    <string name="txt_schedule_alarm">Ustaw Alarm</string>
    <string name="txt_set_alarm_time">Ustaw Czas</string>
    <string name="txt_set_alarm_title">Dodaj tytuł</string>
    <string name="txt_recurring_alarm">Alarm cykliczny</string>
    <string name="txt_Sun">Nd</string>
    <string name="txt_Sat">Sob</string>
    <string name="txt_Fri">Pt</string>
    <string name="txt_Thu">Czw</string>
    <string name="txt_Wed">Śr</string>
    <string name="txt_Tue">Wt</string>
    <string name="txt_Mon">Pn</string>
    <string name="txt_my_alarms">Moje Alarmy</string>
    <string name="txt_add_alarm">Dodaj Alarm</string>
    <string name="txt_input_dose">Podaj dawkę leku</string>
    <string name="txt_input_additional_info">Podaj dodatkowe informacje</string>
    <string name="txt_input_medicament_number_of_doses">Podaj liczbę dawek w opakowaniu</string>
    <string name="continue_without_login">Kontynuuj bez logowania</string>
</resources>
