<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/medical_background">


  <View
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#12000000"/>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      tools:layout_editor_absoluteX="-16dp"
      tools:layout_editor_absoluteY="-16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="715dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <TextView
          android:id="@+id/registerTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="108dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/registerText"
          android:textColor="@color/main_color"
          android:textSize="40sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <EditText
          android:id="@+id/inputEmailRegistrationTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="80dp"
          android:layout_marginEnd="24dp"
          android:background="@drawable/input_bg"
          android:drawableLeft="@drawable/baseline_email_24"
          android:drawablePadding="13dp"
          android:ems="10"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:paddingLeft="20dp"
          android:paddingTop="13dp"
          android:paddingRight="20dp"
          android:paddingBottom="13dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

      <EditText
          android:id="@+id/inputPasswordTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:background="@drawable/input_bg"
          android:drawableLeft="@drawable/baseline_password_24"
          android:drawablePadding="13dp"
          android:ems="10"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:paddingLeft="20dp"
          android:paddingTop="13dp"
          android:paddingRight="20dp"
          android:paddingBottom="13dp"
          app:layout_constraintEnd_toEndOf="@+id/inputEmailRegistrationTextView"
          app:layout_constraintStart_toStartOf="@+id/inputEmailRegistrationTextView"
          app:layout_constraintTop_toBottomOf="@+id/inputEmailRegistrationTextView" />

      <EditText
          android:id="@+id/inputConfirmationPasswordTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:background="@drawable/input_bg"
          android:drawableLeft="@drawable/baseline_password_24"
          android:drawablePadding="13dp"
          android:ems="10"
          android:hint="@string/repeatPasswordText"
          android:inputType="textPassword"
          android:paddingLeft="20dp"
          android:paddingTop="13dp"
          android:paddingRight="20dp"
          android:paddingBottom="13dp"
          app:layout_constraintEnd_toEndOf="@+id/inputEmailRegistrationTextView"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="@+id/inputEmailRegistrationTextView"
          app:layout_constraintTop_toBottomOf="@+id/inputPasswordTextView" />

      <Button
          android:id="@+id/registerButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:background="@drawable/input_bg"
          android:text="@string/register"
          android:textColor="#FF02126C"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="@+id/inputConfirmationPasswordTextView"
          app:layout_constraintStart_toStartOf="@+id/inputPasswordTextView"
          app:layout_constraintTop_toBottomOf="@+id/inputConfirmationPasswordTextView" />

      <TextView
          android:id="@+id/alreadyHaveAccountTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/alreadyHaveAccountText"
          android:textColor="@color/main_color"
          android:textSize="20sp"
          app:layout_constraintEnd_toEndOf="@+id/registerButton"
          app:layout_constraintHorizontal_bias="0.497"
          app:layout_constraintStart_toStartOf="@+id/registerButton"
          app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


  </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>