<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.optionsActivities.detailedActivities.MedicamentDetailsActivity">

    <TextView
        android:id="@+id/MedicamentDetailsTextViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/medicamentDetailsTextViewMedicamentDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicamentDetailsTextViewName" />

    <TextView
        android:id="@+id/medicamentDetailsTextViewDailyDosingFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicamentDetailsTextViewMedicamentDose" />

    <TextView
        android:id="@+id/medicationDetailsTextviewAdditionalMedicamentInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicamentDetailsTextViewDailyDosingFrequency" />

    <Button
        android:id="@+id/medicationDetailsDeleteMedicamentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="deleteMedicamentFromDatabase"
        android:text="@string/medicamentDetailsDeleteMedicamentButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MedicamentDetailsSetNotificationButton"
        app:layout_constraintTop_toBottomOf="@+id/medicationDetailsTextviewAdditionalMedicamentInfo" />

    <Button
        android:id="@+id/medicationDetailsEditMedicamentInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/medicationDetailsEditMedicamentInfoButtonText"
        android:onClick="editMedicamentInDatabase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationDetailsTextviewAdditionalMedicamentInfo" />

    <Button
        android:id="@+id/MedicamentDetailsSetNotificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/MedicamentDetailsSetReminderButtonText"
        android:onClick="setNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationDetailsTextviewAdditionalMedicamentInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>